--- a/Intersect (Core)/Intersect (Core).csproj
+++ b/Intersect (Core)/Intersect (Core).csproj
@@ -269,7 +269,9 @@
     <Compile Include="IO\ISaveable.cs" />
     <Compile Include="IO\ISaveableProvider.cs" />
     <Compile Include="IO\ISaveable.Generic.cs" />
+    <Compile Include="Json\CultureInfoConverter.cs" />
     <Compile Include="Localization\LocaleDescribableToken.cs" />
+    <Compile Include="Localization\LocaleStack.cs" />
     <Compile Include="Localization\LocaleToken.cs" />
     <Compile Include="Localization\LocaleCommand.cs" />
     <Compile Include="Localization\LocaleCommandNamespace.cs" />
@@ -357,6 +359,7 @@
     <Compile Include="Network\Packets\Client\FriendRequestResponsePacket.cs" />
     <Compile Include="Network\Packets\Client\HotbarSwapPacket.cs" />
     <Compile Include="Network\Packets\Client\HotbarUpdatePacket.cs" />
+    <Compile Include="Network\Packets\Client\LocalePacket.cs" />
     <Compile Include="Network\Packets\Client\LoginPacket.cs" />
     <Compile Include="Network\Packets\Client\LogoutPacket.cs" />
     <Compile Include="Network\Packets\SlotQuantityPacket.cs" />
@@ -688,6 +691,9 @@
     <Analyzer Include="..\packages\Microsoft.NetCore.Analyzers.3.0.0\analyzers\dotnet\cs\Microsoft.NetCore.CSharp.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.3.0.0\analyzers\dotnet\cs\Microsoft.NetFramework.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.3.0.0\analyzers\dotnet\cs\Microsoft.NetFramework.CSharp.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Localization\Namespaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
