--- a/Intersect (Core)/Intersect (Core).csproj
+++ b/Intersect (Core)/Intersect (Core).csproj
@@ -270,6 +270,7 @@
     <Compile Include="IO\ISaveableProvider.cs" />
     <Compile Include="IO\ISaveable.Generic.cs" />
     <Compile Include="Json\CultureInfoConverter.cs" />
+    <Compile Include="Localization\CommonStrings.cs" />
     <Compile Include="Localization\LocaleDescribableToken.cs" />
     <Compile Include="Localization\LocaleStack.cs" />
     <Compile Include="Localization\LocaleToken.cs" />
@@ -278,6 +279,9 @@
     <Compile Include="Localization\LocaleDictionary.cs" />
     <Compile Include="Localization\Localized.cs" />
     <Compile Include="Localization\LocaleNamespace.cs" />
+    <Compile Include="Localization\NamespaceMap.cs" />
+    <Compile Include="Localization\Namespaces\CommonStringsRootNamespace.cs" />
+    <Compile Include="Localization\Namespaces\PluginsNamespace.cs" />
     <Compile Include="Logging\Formatting\DefaultFormatter.cs" />
     <Compile Include="Logging\Formatting\ILogFormatter.cs" />
     <Compile Include="Logging\Formatting\PrettyFormatter.cs" />
@@ -692,9 +696,7 @@
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.3.0.0\analyzers\dotnet\cs\Microsoft.NetFramework.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.3.0.0\analyzers\dotnet\cs\Microsoft.NetFramework.CSharp.Analyzers.dll" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Localization\Namespaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
