--- a/Intersect.Server/Intersect.Server.csproj
+++ b/Intersect.Server/Intersect.Server.csproj
@@ -20,11 +20,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Networking\IntersectNetworkServer.cs" />
-    <Compile Remove="Networking\IntersectNetworkSocket.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>Intersect.Tests.Server</_Parameter1>
     </AssemblyAttribute>
@@ -37,6 +32,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Networking\IntersectNetworkServer.cs" />
+    <Compile Remove="Networking\IntersectNetworkSocket.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -45,10 +49,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
+    <EmbeddedResource Update="Pages\Shared\SkipToContentPartialResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <LastGenOutput>_SkipToContentPartial.cshtml.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Compile Update="Pages\Shared\SkipToContentPartialResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SkipToContentPartialResources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -114,18 +123,4 @@
     <Folder Include="Web\RestApi\Middleware\OAuth\" />
   </ItemGroup>
 
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="Web\Pages\Error.cshtml" />
-    <_ContentIncludedByDefault Remove="Web\Pages\Index.cshtml" />
-    <_ContentIncludedByDefault Remove="Web\Pages\Privacy.cshtml" />
-    <_ContentIncludedByDefault Remove="Web\Pages\Shared\_Layout.cshtml" />
-    <_ContentIncludedByDefault Remove="Web\Pages\Shared\_LoginPartial.cshtml" />
-    <_ContentIncludedByDefault Remove="Web\Pages\Shared\_ValidationScriptsPartial.cshtml" />
-    <_ContentIncludedByDefault Remove="Web\Pages\_ViewImports.cshtml" />
-    <_ContentIncludedByDefault Remove="Web\Pages\_ViewStart.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <AdditionalFiles Include="Areas\Identity\Pages\_ViewStart.cshtml" />
-  </ItemGroup>
 </Project>
