--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,9 @@
+root = true
 # To learn more about .editorconfig see https://aka.ms/editorconfigdocs
 ###############################
 # Core EditorConfig Options   #
 ###############################
 # All files
-root = true
 
 [*]
 charset = utf-8
@@ -77,6 +77,8 @@ dotnet_naming_symbols.constant_fields.required_modifiers = const
 ###############################
 # C# Coding Conventions       #
 ###############################
+[*.razor]
+resharper_wrap_object_and_collection_initializer_style = chop_always
 [*.cs]
 # var preferences
 csharp_style_var_for_built_in_types = true:silent
@@ -121,9 +123,10 @@ resharper_keep_existing_invocation_parens_arrangement = false
 resharper_keep_existing_linebreaks = false
 resharper_max_formal_parameters_on_line = 10
 resharper_max_invocation_arguments_on_line = 4
-resharper_object_creation_when_type_not_evident = explicitly_typed
+resharper_object_creation_when_type_not_evident = target_typed
 resharper_place_expr_method_on_single_line = true
 resharper_place_simple_embedded_block_on_same_line = false
+resharper_trailing_comma_in_singleline_lists = true
 resharper_wrap_array_initializer_style = chop_if_long
 resharper_wrap_before_extends_colon = true
 resharper_wrap_chained_method_calls = chop_if_long
