--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,10 +69,28 @@ jobs:
       if: steps.cache-binaries.outputs.cache-hit != 'true'
       run: msbuild Intersect.sln /p:Configuration=Release /p:PackageVersion=${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}${{ github.run_number }}+build.${{ github.sha }} /p:Version=0.7.2.${{ github.run_number }}
 
-    - run: ls -R
+    # - run: ls -R
+
+    - name: Checkout assets main_upgrade branch
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        path: assets_upgrade
+        repository: AscensionGameDev/Intersect-Assets
+        ref: main_upgrade
+        token: ${{ secrets.INTERSECTBOT_ACCESS_TOKEN }}
+
+    - name: Checkout target main_full branch
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        path: assets_full
+        repository: AscensionGameDev/Intersect-Assets
+        ref: main_full
+        token: ${{ secrets.INTERSECTBOT_ACCESS_TOKEN }}
 
     - name: Package artifacts
-      uses: lodicolo/Intersect-Engine@40c9607b2e2e77e9b0f75f4a2242f9a1a9a381f1
+      uses: lodicolo/Intersect-Engine@0068ba36ff8a90bf8abd25a49382582d5131ea24
       with:
         bundle: .github/bundles/*.json
         version: ${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}${{ github.run_number }}+build.${{ github.sha }}
