--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,12 +22,32 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    - name: Cache binaries
+      uses: actions/cache@v3.2.6
+      id: cache-binaries
+      with:
+        path: |
+          Intersect*/bin/Release/**/Intersect*
+        key: ${{ runner.os }}-nuget-${{ hashFiles('Intersect.*/**/*.cs') }}
+
+    - name: Cache NuGet dependencies
+      if: steps.cache-binaries.outputs.cache-hit == 'false'
+      uses: actions/cache@v3.2.6
+      id: cache-nuget
+      with:
+        path: |
+          ~/.nuget/packages
+          Intersect*/obj/project.assets.json
+        key: ${{ runner.os }}-nuget-${{ hashFiles('Intersect.*/*.csproj') }}
+
     - name: Add msbuild to PATH
+      if: steps.cache-binaries.outputs.cache-hit == 'false' || steps.cache-nuget.outputs.cache-hit == 'false'
       uses: microsoft/setup-msbuild@v1.3.1
       with:
         msbuild-architecture: x64
 
     - name: Setup NuGet.exe for use with actions
+      if: steps.cache-binaries.outputs.cache-hit == 'false' || steps.cache-nuget.outputs.cache-hit == 'false'
       # You may pin to the exact commit or the version.
       # uses: NuGet/setup-nuget@fd9fffd6ca4541cf4152a9565835ca1a88a6eb37
       uses: NuGet/setup-nuget@v1.1.1
@@ -41,32 +61,15 @@ jobs:
 
     # - run: nuget locals all -list
 
-    - name: Cache binaries
-      uses: actions/cache@v3.2.6
-      id: cache-binaries
-      with:
-        path: |
-          Intersect*/bin/Release/**/Intersect*
-        key: ${{ runner.os }}-nuget-${{ hashFiles('Intersect.*/**/*.cs') }}
-
-    - name: Cache NuGet dependencies
-      uses: actions/cache@v3.2.6
-      id: cache
-      with:
-        path: |
-          ~/.nuget/packages
-          Intersect*/obj/project.assets.json
-        key: ${{ runner.os }}-nuget-${{ hashFiles('Intersect.*/*.csproj') }}
-
     - name: Restore NuGet Packages
-      if: steps.cache.outputs.cache-hit != 'true' || steps.cache-binaries.outputs.cache-hit != 'true'
+      if: steps.cache-binaries.outputs.cache-hit == 'false' || steps.cache-nuget.outputs.cache-hit == 'false'
       run: nuget restore Intersect.sln
 
     # - run: ls -R ~/.nuget/packages
     # - run: ls -R
 
     - name: Build solution
-      if: steps.cache-binaries.outputs.cache-hit != 'true'
+      if: steps.cache-binaries.outputs.cache-hit == 'false' || steps.cache-nuget.outputs.cache-hit == 'false'
       run: msbuild Intersect.sln /p:Configuration=Release /p:PackageVersion=${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}${{ github.run_number }}+build.${{ github.sha }} /p:Version=0.7.2.${{ github.run_number }}
 
     # - run: ls -R
