--- a/Intersect.props
+++ b/Intersect.props
@@ -17,6 +17,7 @@
     <FileVersion>$(Version)</FileVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NeutralLanguage>en-US</NeutralLanguage>
+    <NoWarn>$(NoWarn);CS1591</NoWarn>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
   </PropertyGroup>
