--- a/.github/workflows/build-net7.yml
+++ b/.github/workflows/build-net7.yml
@@ -69,58 +69,47 @@ jobs:
 
     - name: Build solution
       if: steps.cache-binaries.outputs.cache-hit != 'true' || inputs.forceBuild == true || inputs.forceRestore == true
-      run: dotnet build Intersect.sln -p:Configuration=Release -p:PackageVersion=${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}${{ github.run_number }}+build.${{ github.sha }} -p:Version=0.7.2.${{ github.run_number }}
+      run: dotnet build Intersect.sln -p:Configuration=Release -p:PackageVersion=${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}.${{ github.run_number }}+build.${{ github.sha }} -p:Version=0.7.2.${{ github.run_number }}
+
+    - name: Checkout assets main_upgrade branch
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        path: assets_upgrade
+        repository: AscensionGameDev/Intersect-Assets
+        ref: main_upgrade
+        token: ${{ secrets.INTERSECTBOT_ACCESS_TOKEN }}
+
+    - name: Checkout target main_full branch
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        path: assets_full
+        repository: AscensionGameDev/Intersect-Assets
+        ref: main_full
+        token: ${{ secrets.INTERSECTBOT_ACCESS_TOKEN }}
 
     - name: Package artifacts
-      run: |
-        mkdir intersect-engine
-        mkdir intersect-engine/client
-        mkdir intersect-engine/editor
-        mkdir intersect-engine/server
-        Copy-Item -Path "Intersect.Client/LICENSE.md" -Destination "intersect-engine/client"
-        Copy-Item -Path "Intersect.Client/bin/Release/**/Intersect Client.*" -Destination "intersect-engine/client"
-        Copy-Item -Path "Intersect.Editor/LICENSE.md" -Destination "intersect-engine/editor"
-        Copy-Item -Path "Intersect.Editor/bin/Release/**/Intersect Editor.*" -Destination "intersect-engine/editor"
-        Copy-Item -Path "Intersect.Server/LICENSE.md" -Destination "intersect-engine/server"
-        Copy-Item -Path "Intersect.Server/bin/Release/**/Intersect Server.*" -Destination "intersect-engine/server"
-        Copy-Item -Path "AUTHORS.md" -Destination "intersect-engine"
-        Copy-Item -Path "LICENSE.md" -Destination "intersect-engine"
-        Copy-Item -Path "README.md" -Destination "intersect-engine"
-        Copy-Item -Path "Documentation" -Destination "intersect-engine" -Recurse
-        Compress-Archive -Path "intersect-engine" -DestinationPath "intersect-${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}${{ github.run_number }}+build.${{ github.sha }}.zip"
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3.1.2
+      uses: AscensionGameDev/actions@4c9073d0721da476ac9337fbbfe46a9ca1ae4389
       with:
-        if-no-files-found: error
-        name: intersect-${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}${{ github.run_number }}+build.${{ github.sha }}
-        path: |
-          AUTHORS.md
-          Documentation/**
-          Intersect.*/LICENSE.md
-          Intersect.Client/bin/Release/**/Intersect Client.*
-          Intersect.Editor/bin/Release/**/Intersect Editor.*
-          Intersect.Server/bin/Release/**/Intersect Server.*
-          LICENSE.md
-          README.md
-          !Intersect.*/bin/Release/**/*.xml
-          !Intersect.*/bin/Release/**/*.runtimeconfig.*
-        retention-days: 1
+        bundle: .github/bundles/*.json
+        version: ${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}.${{ github.run_number }}+build.${{ github.sha }}
 
-    # - name: Download artifacts
-    #   uses: actions/download-artifact@v3
-    #   with:
-    #     name: intersect-${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}${{ github.run_number }}+build.${{ github.sha }}
-    #     path: artifacts
+    - name: Upload artifacts for workflow debugging
+      if: inputs.workflowDebug == true
+      uses: actions/upload-artifact@v3
+      with:
+        name: workflow-debug
+        path: "dist/*.zip"
 
-    # - run: ls -R
 
-    - name: Publish Release
+    - name: Publish GitHub Release
+      if: inputs.workflowDebug != true
       uses: softprops/action-gh-release@v0.1.15
       with:
-        files: "intersect-${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}${{ github.run_number }}+build.${{ github.sha }}.zip"
+        files: "dist/*.zip"
         generate_release_notes: true
         prerelease: true
-        name: ${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}${{ github.run_number }}
-        tag_name: v${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}${{ github.run_number }}
+        name: ${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}.${{ github.run_number }}
+        tag_name: v${{ env.VERSION_PREFIX }}${{ env.VERSION_SUFFIX }}.${{ github.run_number }}
         target_commitish: ${{ github.sha }}
