--- a/Intersect.Server.Editors/Intersect.Server.Editors.csproj
+++ b/Intersect.Server.Editors/Intersect.Server.Editors.csproj
@@ -10,4 +10,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap\bootstrap.min.css.map" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Intersect.Server.Framework\Intersect.Server.Framework.csproj" />
+    </ItemGroup>
+
 </Project>
