--- a/Intersect.Client.Core/Intersect.Client.Core.csproj
+++ b/Intersect.Client.Core/Intersect.Client.Core.csproj
@@ -38,6 +38,11 @@
     <EmbeddedResource Include="Resources\MonoGame.Framework.dll.config" />
     <EmbeddedResource Include="Resources\openal32.dll" />
     <EmbeddedResource Include="Resources\Shaders\radialgradient.xnb" />
+    <EmbeddedResource Update="Localization\ClientStrings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ClientStrings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\ClientStrings.*.resx" DependentUpon="ClientStrings.resx" />
   </ItemGroup>
 
   <ItemGroup Label="Package Embedded Resources">
@@ -91,6 +96,14 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" GeneratePathProperty="True" />
     <PackageReference Include="MonoGame.Library.SDL" Version="2.26.5.5" GeneratePathProperty="True" />
     <PackageReference Include="Steamworks.NET" Version="20.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Localization\ClientStrings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ClientStrings.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
